--- a/Mano/static/css/style.css
+++ b/Mano/static/css/style.css
@@ -38,3 +38,26 @@ body {
     @-webkit-keyframes falling-hearts {
     0% {background-position: 0% 30%;}
     }
+
+@import 'https://fonts.googleapis.com/css?family=Roboto+Mono:100';
+html,
+body {
+  font-family: 'Roboto Mono', monospace;
+  height: 100%;
+}
+.container {
+    
+  height: 100%;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+}
+.text {
+  font-weight: 100;
+  font-size: 28px;
+  color: #fafafa;
+}
+.dud {
+  color: #757575;
+}
