--- a/Mano/templates/index.html
+++ b/Mano/templates/index.html
@@ -179,7 +179,7 @@
               Dashboard
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="index1.html">Basic Info</a>
+              <a class="dropdown-item" href="index1.html"> Project Overview</a>
               <a class="dropdown-item" href="more_info.html">More Info</a>
             </div>
           </li>
@@ -202,10 +202,10 @@
       </div>
     </div>
 </div>
-<div class="container">
+<div class="container-fluid p-3">
     <div class="row">
     <div class="col-md-12">
-     <div class="text" style="text-align: center;">
+     <div class="text" style="text-align: center; color: rgb(224, 116, 34);">
      </div>
     </div>
     </div>  
