--- a/Mano/templates/index1.html
+++ b/Mano/templates/index1.html
@@ -75,28 +75,28 @@
     <p style="font-size: medium;"> Can Data Analysis help Identify the Perfect Dating Profile?</p>
   </div>
  
-<div class="container">
-<div class="row">
-  <div class="col-md-2">
-    <div class="well">
-      <h5 style="color: blue;">Age</h5>
-      <select id="selDataset" onchange="optionChanged(this.value)"></select>
+  <div id='myDiv'><comparison>
     </div>
-    <br>
-    <div class="panel panel-primary">
-      <div class="panel-heading">
-        <h3 class="panel-title">Demographic Info</h3>
-      </div>
-      <div id="sample-metadata" class="panel-body"></div>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-2">
+          <div class="well">
+            <h5 style="color: blue;">Age</h5>
+            <select id="selDataset" onchange="optionChanged(this.value)"></select>
+          </div>
+          <div class="panel panel-primary">
+            <div id="sample-metadata" class="panel-body"></div>
+          </div>
+        </div>
+        <div class="col-md-5">
+          <div id="pie"></div>
+        </div>
+        <br>
+        <div class="col-md-5">
+          <div id="bar"></div>
+        </div>
     </div>
-  </div>
-  <div class="col-md-5">
-    <div id="pie"></div>
-  </div>
-  <div class="col-md-5">
-    <div id="bar"></div>
-  </div>
-  <div class="row">
+   <div class="row">
     <div class="col-md-12">
       <div id="table-area" class="">
         <table id="info-table" class="table table-striped" border="1">
