--- a/Mano/templates/index.html
+++ b/Mano/templates/index.html
@@ -166,30 +166,29 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto" >
-        <li class="nav-item dropdown">
-            <a 
-              class="nav-link dropdown-toggle" 
-              href="index.html" 
-              id="navbarDropdown"
-              role="button" 
-              data-toggle="dropdown" 
-              aria-haspopup="true" 
-              aria-expanded="false"
-              style="color: rgb(52, 123, 231);">
-              Dashboard
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="index1.html"> Project Overview</a>
-              <a class="dropdown-item" href="more_info.html">More Info</a>
-            </div>
+        <li class="nav-item">
+            <a class="nav-link" href="index3.html" style="color: rgb(52, 123, 231);"> Overview</a>
           </li>
-        <li class="nav-item">
-          <a class="nav-link" href="comparison.html" style="color: rgb(52, 123, 231);"> Comparison</a>
-        </li>
-        
-        <li class="nav-item">
-          <a class="nav-link" href="data.html" style="color: rgb(52, 123, 231);">Data</a>
-        </li>
+          <li class="nav-item">
+            <a class="nav-link" href="comparison.html" style="color: rgb(52, 123, 231);"> Analysis</a>
+          </li>
+          <li class="nav-item dropdown">
+              <a 
+                class="nav-link dropdown-toggle" 
+                href="index.html" 
+                id="navbarDropdown"
+                role="button" 
+                data-toggle="dropdown" 
+                aria-haspopup="true" 
+                aria-expanded="false"
+                style="color: rgb(52, 123, 231);">
+                Dashboard
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="index1.html">Info Based on Age</a>
+                <a class="dropdown-item" href="index2.html">More Info</a>
+              </div>
+            </li>
       </ul>
     </div>
     </div>
@@ -240,6 +239,10 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <script src="../static/js/anime.js"></script>
+<script src="../static/js/app.js"></script>
+<script src="../static/js/app3.js"></script>
+<script src="../static/js/app4.js"></script>
+
 </body>
 
 </html>   
