--- a/Mano/templates/index2.html
+++ b/Mano/templates/index2.html
@@ -74,72 +74,54 @@
     <h1 style="color: rgb(169, 51, 224);">Exploratory Data Analysis -OkCupid Profiles</h1>
     <p style="font-size: medium;"> Can Data Analysis help Identify the Perfect Dating Profile?</p>
   </div>
- <br>
-  <!-- <div id='myDiv'><comparison>
-    </div> -->
-    <style>
-      html, body {
-        height: 100%;
-      }
-      .h-200 {
-          width:100%;
-          min-height:200px;
-      }
-      .md-25 {
-      margin-bottom:25px;
-      }
-      .h-425 {
-          min-height:425px;
-      }
-      </style>
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-md-2">
-          <div class="well">
-            <h5 style="color: blue" align:"center">Age</h5>
-            <select id="selDataset" onchange="optionChanged(this.value)"></select>
-          </div>
-          <br>
-          <div class="panel panel-primary">
-            <div class="panel-heading">
-              <h3 class="panel-title">Status Info</h3>
-            </div>
-            <div id="basic-metadata" class="panel-body"></div>
-          </div>
-        </div>
-        <div class="col-sm-5">
-          <div id="pie"></div>
-        </div>
-        <br>
-        <div class="col-md-5">
-          <div id="bar"></div>
-        </div>
-        <br>
-        <div class="col-sm-8">
-          <div id="bar2" width="500" height="500"></div>
-        </div>
-        <br>
+  <!-- <div id='myDiv'><comparison> -->
     </div>
-    <br>
-   <div class="row">
-    <div class="col-md-12">
-      <div id="table-area" class="">
-        <table id="info-table" class="table table-striped" border="1">
-          <tbody></tbody>
-        </table>
+    <div class="row">
+      <div class="col-md-2">
+        <div class="well">
+          <h5>Profile Info.:</h5>
+          <select id="selDataset" onchange="optionChanged(this.value)">
+            <option value="age">Age</option>
+            <option value="body_type">Body Type</option>
+            <option value="diet">Diet</option>
+            <option value="sign">signs</option>
+            <option value="offspring">Children</option>
+            <option value="pets">Pets</option>
+            <option value="religion">Religion</option>
+            <option value="status">Status</option>
+            <option value="sex">Sex</option>
+          </select>
+        </div>
+        <!-- <div class="panel panel-primary">
+          <div class="panel-heading"> -->
+            <!-- <h3 class="panel-title">Demographic Info</h3> -->
+          <!-- </div> -->
+          <div id="sample-metadata" class="panel-body"></div>
+        </div>
+      </div>
+      <div class="col-md-5">
+        <div id="bar"></div>
+      </div>
+      <div class="col-md-5">
+        <div id="gauge"></div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <div id="bubble"></div>
       </div>
     </div>
   </div>
-
-<script src="https://d3js.org/d3.v5.min.js"></script>
-<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-<script src="../static/js/app.js"></script>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  
+  <script src="https://d3js.org/d3.v5.min.js"></script>
+  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+  <script src="../static/js/app3.js"></script>
+  <script src="//unpkg.com/sunburst-chart"></script>
+  <script src='https://cdn.plot.ly/plotly-2.9.0.min.js'></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-      
 </body>
-    
-</html>   
-    
+
+</html>
