--- a/Mano/templates/index1.html
+++ b/Mano/templates/index1.html
@@ -12,39 +12,27 @@
 
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #f5cdf7;">
-    <div class="container-fluid"> 
-    <a class="navbar-brand font-weight-bold text-uppercase py-3" style="color: azure;background-color: rgb(236, 101, 191); font-size: larger;" href="index.html">OkCupid</a>
-    
-    <button class="navbar-toggler" 
-            type="button" 
-            data-toggle="collapse" 
-            data-target="#navbarSupportedContent" 
-            aria-controls="navbarSupportedContent" 
-            aria-expanded="true" 
-            aria-label="Toggle navigation"
-            max-height="10px" >
-      <span class="navbar-toggler-icon"></span>
-    </button>
+  <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #f5cdf7;">
+    <div class="container-fluid">
+      <a class="navbar-brand font-weight-bold text-uppercase py-3"
+        style="color: azure;background-color: rgb(236, 101, 191); font-size: larger;" href="index.html">OkCupid</a>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav ml-auto" >
-        <li class="nav-item">
-          <a class="nav-link" href="index3.html" style="color: rgb(52, 123, 231);"> Overview</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="comparison.html" style="color: rgb(52, 123, 231);"> Analysis</a>
-        </li>
-        <li class="nav-item dropdown">
-            <a 
-              class="nav-link dropdown-toggle" 
-              href="index.html" 
-              id="navbarDropdown"
-              role="button" 
-              data-toggle="dropdown" 
-              aria-haspopup="true" 
-              aria-expanded="false"
-              style="color: rgb(52, 123, 231);">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="true" aria-label="Toggle navigation" max-height="10px">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="index3.html" style="color: rgb(52, 123, 231);"> Overview</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="comparison.html" style="color: rgb(52, 123, 231);"> Analysis</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="index.html" id="navbarDropdown" role="button"
+              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color: rgb(52, 123, 231);">
               Dashboard
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -52,46 +40,54 @@
               <a class="dropdown-item" href="index2.html">More Info</a>
             </div>
           </li>
-        
-      </ul>
+
+        </ul>
+      </div>
     </div>
-    </div>
-</nav>
-<style>
-  * {
-    box-sizing: border-box;
-  }
-  
-  @media only screen and (max-width: 620px) {
-    .menu, .main, .right {
-      width: 100%;
+  </nav>
+  <style>
+    * {
+      box-sizing: border-box;
     }
-  }
+
+    @media only screen and (max-width: 620px) {
+
+      .menu,
+      .main,
+      .right {
+        width: 100%;
+      }
+    }
   </style>
+
   <body style="font-family:Verdana;">
-  
-  <div style="background-color:#f5cdf7;padding:15px;text-align:center;">
-    <h1 style="color: rgb(169, 51, 224);">Exploratory Data Analysis -OkCupid Profiles</h1>
-    <p style="font-size: medium;"> Can Data Analysis help Identify the Perfect Dating Profile?</p>
-  </div>
- <br>
-  <!-- <div id='myDiv'><comparison>
+
+    <div style="background-color:#f5cdf7;padding:15px;text-align:center;">
+      <h1 style="color: rgb(169, 51, 224);">Exploratory Data Analysis -OkCupid Profiles</h1>
+      <p style="font-size: medium;"> Can Data Analysis help Identify the Perfect Dating Profile?</p>
+    </div>
+    <br>
+    <!-- <div id='myDiv'><comparison>
     </div> -->
     <style>
-      html, body {
+      html,
+      body {
         height: 100%;
       }
+
       .h-200 {
-          width:100%;
-          min-height:200px;
+        width: 100%;
+        min-height: 200px;
       }
+
       .md-25 {
-      margin-bottom:25px;
+        margin-bottom: 25px;
       }
+
       .h-425 {
-          min-height:425px;
+        min-height: 425px;
       }
-      </style>
+    </style>
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-2">
@@ -114,32 +110,51 @@
         <div class="col-md-5">
           <div id="bar"></div>
         </div>
-        <br>
-        <div class="col-sm-8">
-          <div id="bar2" width="500" height="500"></div>
+      </div>
+      <br>
+      <div class="row">
+        <div class="col-md-12">
+          <div id="bar2"></div>
         </div>
-        <br>
-    </div>
-    <br>
-   <div class="row">
-    <div class="col-md-12">
-      <div id="table-area" class="">
-        <table id="info-table" class="table table-striped" border="1">
-          <tbody></tbody>
-        </table>
+      </div>
+      <br>
+      <div class="row">
+        <div class="col-md-4">
+          <div id="pie2"></div>
+        </div>
+        <div class="col-md-4">
+          <div id="pie3"></div>
+        </div>
+        <div class="col-md-4">
+          <div id="pie4"></div>
+        </div>
+      </div>
+      <br>
+      <div class="row">
+        <div class="col-md-12">
+          <div id="table-area" class="">
+            <table id="info-table" class="table table-striped" border="1">
+              <tbody></tbody>
+            </table>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
 
-<script src="https://d3js.org/d3.v5.min.js"></script>
-<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-<script src="../static/js/app.js"></script>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://d3js.org/d3.v5.min.js"></script>
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <script src="../static/js/app.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"></script>
 
-      
-</body>
-    
-</html>   
-    
+
+  </body>
+
+</html>
