--- a/Mano/templates/index.html
+++ b/Mano/templates/index.html
@@ -189,6 +189,9 @@
                 <a class="dropdown-item" href="index2.html">More Info</a>
               </div>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="summary.html" style="color: rgb(52, 123, 231);"> Summary</a>
+            </li>
       </ul>
     </div>
     </div>
@@ -196,38 +199,51 @@
     
 <div class="container-fluid p-5 text-center">
     <div class="row">
-      <div class="col-md-12">
+      <div class="col-md-10">
         <h1 style="color: rgb(169, 51, 224);">Exploratory Data Analysis -OkCupid Profiles</h1>
       </div>
     </div>
 </div>
 <div class="container-fluid p-3">
     <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-10">
      <div class="text" style="text-align: center; color: rgb(224, 116, 34);">
      </div>
     </div>
     </div>  
 </div>
 
-<div class="container-fluid p-5 text-center">
+<div class="container-fluid p-5">
     <div class="row">
-      <div class="col-md-12">
-        <img src="https://miro.medium.com/max/1400/1*ylGj2QQVYqDWWlKbuV_M5A.png" class="img-fluid" alt="dating" width="600" height="600">
+      <div class="col-md-10" align ="center">
+        <img src="https://miro.medium.com/max/1400/1*ylGj2QQVYqDWWlKbuV_M5A.png" class="img-fluid" alt="dating" width="700" height="600">
+      </div>
+      <div class="col-md-2">
+      <article class="description-content">
+        <hr>
+        <h3>Team Members</h3>
+        <hr>
+        <ul>
+            <li>Sally Ahmed</li>
+            <li>Ruby Nguyen </li>
+            <li>Samuel Park</li>
+            <li>Manochitra Kumar</li>
+        </ul>
+      </article>
       </div>
     </div>
 </div>
-
+    
 <div class="container-fluid text-center">
     <div class="row">
-      <div class="col-md-12">
+      <div class="col-md-10">
         <p>
             OkCupid is one of the top 10  U.S.-based, online dating website and application.
         </p>
         <p>
         The OkCupid data is published in 
         <a href="https://www.kaggle.com/andrewmvd/okcupid-profiles">kaggle</a>
-         as a csv file. The data set consists of user profile data for 59,946 San Francisco OkCupid users from 2021.
+         as a csv file. The data set consists of user profile data for 59,946 San Francisco OkCupid users.
         </p>
        </div>
       </div>
