--- a/Mano/templates/comparison.html
+++ b/Mano/templates/comparison.html
@@ -51,7 +51,10 @@
                 <a class="dropdown-item" href="index1.html">Info Based on Age</a>
                 <a class="dropdown-item" href="index2.html">More Info</a>
               </div>
-            </li>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="summary.html" style="color: rgb(52, 123, 231);"> Summary</a>
+          </li>
           
       </ul>
     </div>
