--- a/Mano/templates/index2.html
+++ b/Mano/templates/index2.html
@@ -51,7 +51,10 @@
               <a class="dropdown-item" href="index1.html">Info Based on Age</a>
               <a class="dropdown-item" href="index2.html">More Info</a>
             </div>
-          </li>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="summary.html" style="color: rgb(52, 123, 231);"> Summary</a>
+        </li>
         
       </ul>
     </div>
@@ -74,8 +77,7 @@
     <h1 style="color: rgb(169, 51, 224);">Exploratory Data Analysis -OkCupid Profiles</h1>
     <p style="font-size: medium;"> Can Data Analysis help Identify the Perfect Dating Profile?</p>
   </div>
-  <!-- <div id='myDiv'><comparison> -->
-    </div>
+
     <div class="row">
       <div class="col-md-2">
         <div class="well">
@@ -115,7 +117,7 @@
   
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-  <script src="../static/js/app4.js"></script>
+  <script src="../static/js/app3.js"></script>
   <script src="//unpkg.com/sunburst-chart"></script>
   <script src='https://cdn.plot.ly/plotly-2.9.0.min.js'></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
