--- a/Mano/templates/summary.html
+++ b/Mano/templates/summary.html
@@ -91,73 +91,24 @@
         min-height: 425px;
       }
     </style>
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-md-2">
-          <div class="well">
-            <h5 style="color: blue" align:"center">Age</h5>
-            <select id="selDataset" onchange="optionChanged(this.value)"></select>
-          </div>
-          <br>
-          <div class="panel panel-primary">
-            <div class="panel-heading">
-              <h3 class="panel-title">Status Info</h3>
-            </div>
-            <div id="basic-metadata" class="panel-body"></div>
+    <div class="container-fluid p-5">
+        <div class="row">
+          <div class="col-md-12" align ="center">
+            <p style="text-align: center;">The following table summarizes the profile of a typical male and female by aggregating the most common responses for each category.</p>
+            <br>
+            <p style="text-align: center;">Much data remains the same across gender, except for height, religion, sign, job and body type.</p>
+            <img src="../static/images/summary.png" class="img-fluid" alt="dating" width="700" height="600">
           </div>
         </div>
-        <div class="col-sm-5">
-          <div id="pie"></div>
-        </div>
-        <br>
-        <div class="col-md-5">
-          <div id="bar"></div>
-        </div>
-      </div>
-      <br>
-      <div class="row">
-        <div class="col-md-12">
-          <div id="bar2"></div>
-        </div>
-      </div>
-      <br>
-      <div class="row">
-        <div class="col-md-4">
-          <div id="pie2"></div>
-        </div>
-        <div class="col-md-4">
-          <div id="pie3"></div>
-        </div>
-        <div class="col-md-4">
-          <div id="pie4"></div>
-        </div>
-      </div>
-      <br>
-      <div class="row">
-        <div class="col-md-12">
-          <div id="table-area" class="">
-            <table id="info-table" class="table table-striped" border="1">
-              <tbody></tbody>
-            </table>
-          </div>
-        </div>
-      </div>
     </div>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="../static/js/anime.js"></script>
+<script src="../static/js/app.js"></script>
+<script src="../static/js/app3.js"></script>
+<script src="../static/js/app4.js"></script>
 
-    <script src="https://d3js.org/d3.v5.min.js"></script>
-    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-    <script src="../static/js/app.js"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-      crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-      crossorigin="anonymous"></script>
+</body>
 
-
-  </body>
-
-</html>
+</html>  
