--- a/Mano/templates/index3.html
+++ b/Mano/templates/index3.html
@@ -36,8 +36,8 @@
               Dashboard
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="index2.html">Life style Info</a>
               <a class="dropdown-item" href="index1.html">Info Based on Age</a>
-              <a class="dropdown-item" href="index2.html">More Info</a>
             </div>
           </li>
           <li class="nav-item">
@@ -67,7 +67,7 @@
 
     <div style="background-color:#f5cdf7;padding:15px;text-align:center;">
       <h1 style="color: rgb(169, 51, 224);">Exploratory Data Analysis -OkCupid Profiles</h1>
-      <p style="font-size: medium;"> Can Data Analysis help Identify the Perfect Dating Profile?</p>
+    
     </div>
     <br>
     <p style="text-align: center;">The following chart gives the overview of the variables found in the dataset.</p>
