--- a/Mano/templates/summary.html
+++ b/Mano/templates/summary.html
@@ -36,8 +36,8 @@
               Dashboard
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="index2.html">Life style Info</a>
               <a class="dropdown-item" href="index1.html">Info Based on Age</a>
-              <a class="dropdown-item" href="index2.html">More Info</a>
             </div>
           </li>
           <li class="nav-item">
@@ -67,7 +67,6 @@
 
     <div style="background-color:#f5cdf7;padding:15px;text-align:center;">
       <h1 style="color: rgb(169, 51, 224);">Exploratory Data Analysis -OkCupid Profiles</h1>
-      <p style="font-size: medium;"> Can Data Analysis help Identify the Perfect Dating Profile?</p>
     </div>
     <br>
     <!-- <div id='myDiv'><comparison>
@@ -92,7 +91,7 @@
       }
     </style>
     <div class="container-fluid p-5">
-        <div class="row">
+      <div class="row">
           <div class="col-md-12" align ="center">
             <p style="text-align: center;">The following table summarizes the profile of a typical male and female by aggregating the most common responses for each category.</p>
             <br>
@@ -100,6 +99,26 @@
             <img src="../static/images/summary.png" class="img-fluid" alt="dating" width="700" height="600">
           </div>
         </div>
+        <div class="row">
+          <div class="col-md-6">
+          <article class="description-content">
+            <br>
+            <hr>
+            FUTURE DIRECTIONS:
+            <hr>
+            <ul>
+              <li>Look deeper into the discrepancies of income based on gender, ethnicity and age. </li>
+
+              <li> Perform statistical analysis of drinking habits based on age and income. </li>
+                
+              <li>More modeling opportunities that the data presents.</li>
+            </ul>
+
+          </article>
+          </div>
+            
+        </div>
+      </div>
     </div>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
