--- a/Mano/templates/comparison.html
+++ b/Mano/templates/comparison.html
@@ -48,8 +48,8 @@
                 Dashboard
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="index2.html">Life style Info</a>
                 <a class="dropdown-item" href="index1.html">Info Based on Age</a>
-                <a class="dropdown-item" href="index2.html">More Info</a>
               </div>
           </li>
           <li class="nav-item">
@@ -75,7 +75,6 @@
   
   <div style="background-color:#f5cdf7;padding:15px;text-align:center;">
     <h1 style="color: rgb(169, 51, 224);">Exploratory Data Analysis -OkCupid Profiles</h1>
-    <p style="font-size: medium;"> Can Data Analysis help Identify the Perfect Dating Profile?</p>
   </div>
 
   <div class="container-fluid">
