--- a/Mano/templates/index.html
+++ b/Mano/templates/index.html
@@ -8,7 +8,6 @@
   <title>Dating data</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-
 <style>
     body	{
         background-color : #f1c0e0;
@@ -185,8 +184,8 @@
                 Dashboard
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="index2.html">Life style Info</a>
                 <a class="dropdown-item" href="index1.html">Info Based on Age</a>
-                <a class="dropdown-item" href="index2.html">More Info</a>
               </div>
             </li>
             <li class="nav-item">
@@ -201,16 +200,9 @@
     <div class="row">
       <div class="col-md-10">
         <h1 style="color: rgb(169, 51, 224);">Exploratory Data Analysis -OkCupid Profiles</h1>
+        <p style="font-size: medium;"> Can Data Analysis help Identify the Perfect Dating Profile?</p>
       </div>
     </div>
-</div>
-<div class="container-fluid p-3">
-    <div class="row">
-    <div class="col-md-10">
-     <div class="text" style="text-align: center; color: rgb(224, 116, 34);">
-     </div>
-    </div>
-    </div>  
 </div>
 
 <div class="container-fluid p-5">
@@ -254,7 +246,6 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-<script src="../static/js/anime.js"></script>
 <script src="../static/js/app.js"></script>
 <script src="../static/js/app3.js"></script>
 <script src="../static/js/app4.js"></script>
