--- a/Mano/templates/index1.html
+++ b/Mano/templates/index1.html
@@ -36,8 +36,8 @@
               Dashboard
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="index2.html">Life style Info</a>
               <a class="dropdown-item" href="index1.html">Info Based on Age</a>
-              <a class="dropdown-item" href="index2.html">More Info</a>
             </div>
           </li>
           <li class="nav-item">
@@ -67,7 +67,7 @@
 
     <div style="background-color:#f5cdf7;padding:15px;text-align:center;">
       <h1 style="color: rgb(169, 51, 224);">Exploratory Data Analysis -OkCupid Profiles</h1>
-      <p style="font-size: medium;"> Can Data Analysis help Identify the Perfect Dating Profile?</p>
+      
     </div>
     <br>
     <!-- <div id='myDiv'><comparison>
@@ -106,7 +106,8 @@
             <div id="basic-metadata" class="panel-body"></div>
           </div>
         </div>
-        <div class="col-sm-5">
+        <br>
+        <div class="col-md-5">
           <div id="pie"></div>
         </div>
         <br>
@@ -116,7 +117,7 @@
       </div>
       <br>
       <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-10 text-center">
           <div id="bar2"></div>
         </div>
       </div>
@@ -132,10 +133,10 @@
           <div id="pie4"></div>
         </div>
       </div>
-      <br>
       <div class="row">
         <div class="col-md-12">
           <div id="table-area" class="">
+            Summary Table:
             <table id="info-table" class="table table-striped" border="1">
               <tbody></tbody>
             </table>
@@ -156,7 +157,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"></script>
-
+    <!-- Chart.js v2.9.3 -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
 
   </body>
 
