--- a/Mano/templates/index2.html
+++ b/Mano/templates/index2.html
@@ -48,8 +48,8 @@
               Dashboard
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="index2.html">Life style Info</a>
               <a class="dropdown-item" href="index1.html">Info Based on Age</a>
-              <a class="dropdown-item" href="index2.html">More Info</a>
             </div>
         </li>
         <li class="nav-item">
@@ -75,15 +75,10 @@
   
   <div style="background-color:#f5cdf7;padding:15px;text-align:center;">
     <h1 style="color: rgb(169, 51, 224);">Exploratory Data Analysis -OkCupid Profiles</h1>
-    <p style="font-size: medium;"> Can Data Analysis help Identify the Perfect Dating Profile?</p>
   </div>
-<<<<<<< HEAD
-
-=======
   <div class="col-md-12 jumbotron text-center"></div>
   <!-- <div id='myDiv'><comparison> -->
     </div>
->>>>>>> 9a28cfbe1989ad8c01b3ed53449c953775f5ca55
     <div class="row">
       <div class="col-md-2">
         <div class="well">
@@ -127,8 +122,8 @@
   <script src="//unpkg.com/sunburst-chart"></script>
   <script src='https://cdn.plot.ly/plotly-2.9.0.min.js'></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
 </body>
 
